--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.2"
+    "mongoose": "^6.6.2",
+    "stripe": "^10.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
