--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First backend version for the photoapp project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "WATCHPACK_POLLING=true nodemon index.js",
     "dev": "nodemon -L index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,13 +24,17 @@
   },
   "homepage": "https://github.com/Photoapp-Team/PHOTOAPP_MVP_BACKEND#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.194.0",
+    "aws-sdk": "^2.1238.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.2"
+    "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
