--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
+    "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.4.2",
     "stripe": "^10.14.0"
   },
   "devDependencies": {
