--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/Photoapp-Team/PHOTOAPP_MVP_BACKEND#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.194.0",
+    "@stripe/react-stripe-js": "^1.14.1",
+    "@stripe/stripe-js": "^1.42.0",
     "aws-sdk": "^2.1238.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
