--- a/.github/workflows/fotofiCI.yml
+++ b/.github/workflows/fotofiCI.yml
@@ -28,7 +28,8 @@ jobs:
     - name: 'Create env file'
       run: |
           touch .env
-          echo DB_USERNAME=${{ secrets.DB_USERNAME >> .env
+          echo "" > .env
+          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
           echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
