--- a/.github/workflows/fotofiCI.yml
+++ b/.github/workflows/fotofiCI.yml
@@ -34,6 +34,12 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
           echo JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} >> .env
+          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
+          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
+          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
+          echo AWS_BUCKET_PROFILE_NAME=${{ secrets.AWS_BUCKET_PROFILE_NAME }} >> .env
+          echo AWS_BUCKET_PACKAGE_NAME=${{ secrets.AWS_BUCKET_PACKAGE_NAME }} >> .env
+          echo AWS_BUCKET_SESSION_NAME=${{ secrets.AWS_BUCKET_SESSION_NAME }} >> .env
       
        
     - name: 'Clean installation'
