--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "stripe": "^10.15.0",
-    "uuid": "^9.0.0",
-    "multer": "^1.4.5-lts.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
